# Walnut

./: .gitignore  CMakeLists.txt  conanfile.py
Examples/: CMakeLists.txt
Examples/1.FirstTriangle/: CMakeLists.txt  main.cpp
Examples/10.FirstTexture/: CMakeLists.txt  main.cpp
Examples/11.TextureSampler/: CMakeLists.txt  main.cpp
Examples/12.TextureLoader/: CMakeLists.txt  main.cpp
Examples/13.CameraControls/: CMakeLists.txt  main.cpp
Examples/14.Lighting/: CMakeLists.txt  main.cpp
Examples/15.NormalMapping/: CMakeLists.txt  main.cpp
Examples/16.BasicCompute/: CMakeLists.txt  main.cpp
Examples/17.RayMarching/: CMakeLists.txt  main.cpp
Examples/18.Fluid2D/: CMakeLists.txt  FluidSolver.cpp  FluidSolver.h  FluidSolver2D.cpp  FluidSolver2D.h  main.cpp
Examples/19.Fluid3D/: CMakeLists.txt
Examples/2.VertexBuffers/: CMakeLists.txt  main.cpp
Examples/3.VertexAttributes/: CMakeLists.txt  main.cpp
Examples/4.IndexBuffers/: CMakeLists.txt  main.cpp
Examples/5.UniformBuffers/: CMakeLists.txt  main.cpp
Examples/6.DynamicUniforms/: CMakeLists.txt  main.cpp
Examples/7.First3DShape/: CMakeLists.txt  main.cpp
Examples/8.TransformationMatrices/: CMakeLists.txt  main.cpp
Examples/9.BasicShading/: CMakeLists.txt  main.cpp
Examples/Common/: Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Compute.cpp  Compute.h  Geometry.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Texture.h  Uniform.h  WebGPUCompute.cpp  WebGPUCompute.h  WebGPURenderer2D.cpp  WebGPURenderer2D.h  WebGPURenderer3D.cpp  WebGPURenderer3D.h
Examples/FirstTriangle/: CMakeLists.txt  Renderer2D.cpp  Renderer2D.h  WebGPURenderer2D.cpp  WebGPURenderer2D.h  main.cpp
Resources/: shell.html
Walnut/src/Walnut/: Application.cpp  Application.h  ApplicationGLFW.cpp  ApplicationSDL.cpp  EntryPoint.h  ExportConfig.h  Image.cpp  Image.h  ImageFormat.h  Layer.h  Random.cpp  Random.h  RenderCommand.cpp  RenderCommand.h  RenderingBackend.cpp  RenderingBackend.h  WindowHandle.cpp  WindowHandle.h
Walnut/src/Walnut/GLM/: GLM.h
Walnut/src/Walnut/GraphicsAPI/: GlfwOpenGLRenderingBackend.cpp  GlfwOpenGLRenderingBackend.h  GlfwVulkanRenderingBackend.cpp  GlfwVulkanRenderingBackend.h  GraphicsCommon.h  OpenGLGraphics.cpp  OpenGLGraphics.h  OpenGLImage.cpp  OpenGLImage.h  VulkanGraphics.cpp  VulkanGraphics.h  VulkanImage.cpp  VulkanImage.h  glwidget.cpp  glwidget.h
Walnut/src/Walnut/GraphicsAPI/OpenGL/: CMakeLists.txt  GlfwOpenGLRenderingBackend.cpp  GlfwOpenGLRenderingBackend.h  ImGuiBuildOpenGL.cpp  OpenGLGraphics.cpp  OpenGLGraphics.h  OpenGLImage.cpp  OpenGLImage.h  OpenGLRenderingBackend.h  SdlOpenGLRenderingBackend.cpp
Walnut/src/Walnut/GraphicsAPI/Vulkan/: CMakeLists.txt  GlfwVulkanRenderingBackend.cpp  GlfwVulkanRenderingBackend.h  ImGuiBuildVulkan.cpp  SdlVulkanRenderingBackend.cpp  VulkanGraphics.cpp  VulkanGraphics.h  VulkanImage.cpp  VulkanImage.h  VulkanRenderingBackend.h
Walnut/src/Walnut/GraphicsAPI/WebGPU/: CMakeLists.txt  GlfwWebGPURenderingBackend.cpp  GlfwWebGPURenderingBackend.h  ImGuiBuildWGPU.cpp  SdlWebGPURenderingBackend.cpp  WebGPUGraphics.cpp  WebGPUGraphics.h  WebGPUImage.cpp  WebGPUImage.h  WebGPURenderingBackend.h  imgui-webgpu-part1.cpp
Walnut/src/Walnut/ImGui/: ImGuiBuild.cpp  ImGuiBuildOpenGL.cpp  ImGuiBuildVulkan.cpp  ImGuiBuildWGPU.cpp
Walnut/src/Walnut/Input/: GLFWInput.cpp  Input.cpp  Input.h  SDLInput.cpp
WalnutApp/: CMakeLists.txt
WalnutApp/src/: SDL_uikit_main.c  SandboxLayer.cpp  SandboxLayer.h  WalnutApp.cpp  dummymain.cpp
testing/: glib-wasm-conanfile.py
testing/conan-profiles/: android  emscripten  mac-arm64  mac-x86-64
