add_subdirectory(1.FirstTriangle)
add_subdirectory(2.VertexBuffers)
add_subdirectory(3.VertexAttributes)
add_subdirectory(4.IndexBuffers)
add_subdirectory(5.UniformBuffers)
add_subdirectory(6.DynamicUniforms)
add_subdirectory(7.First3DShape)
add_subdirectory(8.TransformationMatrices)
add_subdirectory(9.BasicShading)