add_subdirectory(1.FirstTriangle)
add_subdirectory(2.VertexBuffers)
add_subdirectory(3.VertexAttributes)
add_subdirectory(4.IndexBuffers)
add_subdirectory(5.UniformBuffers)
add_subdirectory(6.DynamicUniforms)
add_subdirectory(7.First3DShape)
add_subdirectory(8.TransformationMatrices)
add_subdirectory(9.BasicShading)
add_subdirectory(10.FirstTexture)
add_subdirectory(11.TextureSampler)
add_subdirectory(12.TextureLoader)
add_subdirectory(13.CameraControls)
add_subdirectory(14.Lighting)
add_subdirectory(15.NormalMapping)
add_subdirectory(16.BasicCompute)
add_subdirectory(17.RayMarching)